<resources>
    <string name="app_name">PITA_Rewards2</string>
    <string name="login_title">Gustavus Coffee</string>
    <string name="welcome">Welcome</string>
    <string name="please_login">Please Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_prompt">New User? Sign Up Here</string>
    <string name="login_button">Login</string>
    <string name="signupTitle">Create an account:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="studentID">Student ID</string>
    <string name="signup_button">Sign Up</string>
    <string name="user">Hello User!</string>
    <string name="account">Profile</string>
    <string name="rewardPointsText">Reward Points:</string>
    <string name="points">0</string>
    <string-array name="locations">
        <item>Courtyard</item>
        <item>Steamery</item>
    </string-array>
    <string name="cart">Cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total">Total</string>
    <string name="subTotal">Subtotal</string>
    <string name="dollar_minus">$-</string>
    <string name="checkout">Checkout</string>
    <string name="one">1</string>
    <string name="zero_dollars">$0</string>
    <string name="title">Title</string>
    <string name="submit">Submit</string>
    <string name="logout_button">Logout</string>
    <string name="notifications">Enable notification</string>
    <string name="changePass">Change password</string>
    <string name="changePhone">Update phone number</string>
    <string name="updatePic">Update profile picture</string>
    <string name="save">Save</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="updatePhone">Phone Number</string>
    <string name="enter_payment_method">Enter payment method</string>
    <string name="enter_name_for_pickup">Enter name for pickup</string>
    <string name="placeholder">Placeholder</string>
    <string name="already_registered_login">Already Registered?</string>
    <string name="test">test</string>
    <string name="drinkTimer">Drink ready in</string>
    <string name="popUpText">Drink Ready In:</string>
    <string name="timer">00:00</string>
    <string name="size">Select size:</string>
    <string name="milk">Select milk option:</string>
    <string name="flavors">Select flavor:</string>
    <string name="fruit_options">Select 4 fruits:</string>
    <string name="additional">Select 2 additional ingredients:</string>
    <string name="select_liquid">Select a liquid:</string>
    <string name="sweetness">Select sweetness level:</string>
    <string name="add_to_order">Add To Order</string>
    <string name="hot_or_iced">Select hot/iced:</string>
    <string name="hot">Hot</string>
    <string name="iced">Iced</string>
    <string name="cancel_button">Cancel</string>
    <string name="menu">Drinks Menu:</string>
    <string name="orders">Orders</string>
    <string name="employee_login">Employee Login</string>
    <string name="mark_complete">Done</string>
    <string name="name" />
    <string name="order_details">Order Details</string>
    <string name="orderName">Name</string>
    <string name="location_text">Location</string>
    <string name="apply_points">Use Points</string>
    <string name="qr_scan">Scan QR</string>
    <string name="scanned_value">Scanned Value</string>
    <string name="unavailable">Unavailable</string>
    <string name="latte">Latte</string>
    <string name="smoothie">Smoothie</string>
    <string name="matcha">Matcha</string>
    <string name="coldBrew">Cold Brew</string>
    <string name="lemonade">Lemonade</string>
    <string name="tea">Tea</string>
    <string name="hotChocolate">Hot Chocolate</string>
    <string name="milk2">Milk</string>
    <string name="back">Back</string>
    <string name="drinks">Drinks</string>
    <string name="is_employee">Tick if an employee:</string>
    <string name="drink_name">Drink</string>
    <string name="drink_price">5</string>
    <string name="discount_1">50%</string>
    <string name="discount_2">OFF</string>
    <string name="discount_code">Use code FINALS50</string>
    <string name="hotChoc">Select chocolate:</string>
    <string name="text_tea">Select tea:</string>
    <string name="mark_unavailability">Mark Unavailable</string>
    <string name="unavailability">Unavailability</string>
    <string name="subtract_10_points">Subtract 10 Points</string>
    <string name="home">Home</string>
    <string name="x1">x1</string>
    <string name="remove_button">Remove Button</string>
    <string name="image_of_drink">Image of drink</string>
    <string name="insert_drink_name">Insert Drink Name</string>
    <string name="your_selections_will_appear_here">Your selections will appear here.</string>
    <string name="coffee_cup">Coffee Cup</string>

</resources>