<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".mainActivities.SignupActivity">

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7F4F24"
        android:alpha="0.5" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Coffee Cup"
            android:src="@drawable/coffee_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:fontFamily="@font/ngetic"
            android:textSize="43sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="28dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signupTitle"
                android:fontFamily="@font/ngetic"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/maple_primary"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/light_brown"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    android:drawableEnd="@drawable/done_icon"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/light_brown"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    android:drawableEnd="@drawable/done_icon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/light_brown"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:drawableEnd="@drawable/done_icon"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/studentID"
                    android:textColor="@color/light_brown"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/studentID"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:drawableEnd="@drawable/done_icon" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/light_brown"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/signupUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/done_icon"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/light_brown"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"/>

            <CheckBox
                android:id="@+id/employee_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_employee"
                android:textColor="@color/light_brown"
                android:textStyle="bold"
                android:padding="5dp"
                android:layoutDirection="rtl"/>

            <TextView
                android:id="@+id/loginRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered_login"
                android:textColor="@color/maple_secondary"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/signup_button"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/ngetic"
                android:backgroundTint="@color/maple_secondary"
                android:textSize="18sp"
                app:cornerRadius="32dp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>

