<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CheckoutActivity">

    <LinearLayout
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="28dp"
        tools:layout_editor_absoluteY="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_full_corner"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_minus"
                android:textColor="@color/maple_primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <!-- Username Field-->

            <!-- Username Title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/enter_payment_method"
                android:textColor="@color/maple_secondary"
                android:textStyle="bold" />

            <!-- Username Box -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/gustavus_icon" />

            <!-- Password Field-->

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <!-- Name Title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/enter_name_for_pickup"
                android:textColor="@color/maple_secondary"
                android:textStyle="bold" />

            <!-- Name Box -->
            <EditText
                android:id="@+id/nameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/user"
                android:textColor="@color/black" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <!-- Submit Button-->
            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/maple_secondary"
                android:fontFamily="@font/ngetic"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="32dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
