<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/white_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/picCart"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/picCart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_dollars"
            android:textColor="@color/maple_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/picCart"
            app:layout_constraintStart_toStartOf="@+id/titleTxt" />

        <TextView
            android:id="@+id/individualFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_dollars"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/totalFee"
            app:layout_constraintStart_toStartOf="@+id/titleTxt"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

        <ImageView
            android:id="@+id/removeItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_icon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/maple_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addButton"
                app:layout_constraintStart_toEndOf="@+id/subtractButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtractButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>